--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "searchrepos",
   "version": "0.1.0",
+  "homepage": "https://valeriyach.github.io/searchGitRepos/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -31,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
